--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ colorlog = "^6.8.2"
 pyexecjs = "^1.5.1"
 py-mini-racer = "^0.6.0"
 furl = "^2.1.3"
+typing-extensions = "^4.12.2"
 
 
 [build-system]
