--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ pyexecjs = "^1.5.1"
 py-mini-racer = "^0.6.0"
 furl = "^2.1.3"
 typing-extensions = "^4.12.2"
+mongoengine = "^0.28.2"
+walrus = "^0.9.4"
+dynaconf = "^3.2.6"
+ujson = "^5.10.0"
 
 
 [build-system]
