--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ mongoengine = "^0.28.2"
 walrus = "^0.9.4"
 dynaconf = "^3.2.6"
 ujson = "^5.10.0"
+psutil = "^6.0.0"
+peewee = "^3.17.6"
+httpx = "^0.27.0"
+htmlmin = "^0.1.12"
 
 
 [build-system]
