--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ psutil = "^6.0.0"
 peewee = "^3.17.6"
 httpx = "^0.27.0"
 htmlmin = "^0.1.12"
+sqlparse = "^0.5.1"
+tqdm = "^4.66.5"
+jinja2 = "^3.1.4"
+click = "^8.1.7"
 
 
 [build-system]
