--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ sqlparse = "^0.5.1"
 tqdm = "^4.66.5"
 jinja2 = "^3.1.4"
 click = "^8.1.7"
+yagmail = "^0.15.293"
+pymysql = "^1.1.1"
+drissionpage = "^4.0.5.6"
 
 
 [build-system]
