--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ click = "^8.1.7"
 yagmail = "^0.15.293"
 pymysql = "^1.1.1"
 drissionpage = "^4.0.5.6"
+pillow = "^10.4.0"
+pandas = "^2.2.2"
 
 
 [build-system]
