--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "athenaeum"
-version = "0.1.3"
+version = "0.1.4"
 description = ""
 authors = ["mathewgeola <mathewgeola@163.com>"]
 readme = "README.md"
@@ -29,6 +29,7 @@ pymysql = "^1.1.1"
 drissionpage = "^4.0.5.6"
 pillow = "^10.4.0"
 pandas = "^2.2.2"
+requests-toolbelt = "^1.0.0"
 
 [tool.poetry.scripts]
 render_project = "athenaeum.scripts:render_project"
