--- a/athenaeum/templates/project/settings/settings.toml
+++ b/athenaeum/templates/project/settings/settings.toml
@@ -5,11 +5,13 @@ MYSQL_USERNAME = ""
 MYSQL_PASSWORD = ""
 MYSQL_DBNAME = ""
 
-MONGO_HOST = "localhost"
-MONGO_PORT = 27017
-MONGO_USERNAME = ""
-MONGO_PASSWORD = ""
-MONGO_DBNAME = ""
+SQLITE_PATH = ""
+
+MONGODB_HOST = "localhost"
+MONGODB_PORT = 27017
+MONGODB_USERNAME = ""
+MONGODB_PASSWORD = ""
+MONGODB_DBNAME = ""
 
 REDIS_HOST = "localhost"
 REDIS_PORT = 6379
