--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pillow = "^10.4.0"
 pandas = "^2.2.2"
 requests-toolbelt = "^1.0.0"
 sqlalchemy = "^2.0.32"
+pypinyin = "^0.52.0"
 
 [tool.poetry.scripts]
 render_project = "athenaeum.scripts:render_project"
