--- a/athenaeum/templates/project/settings/settings.toml
+++ b/athenaeum/templates/project/settings/settings.toml
@@ -5,6 +5,12 @@ MYSQL_USERNAME = ""
 MYSQL_PASSWORD = ""
 MYSQL_DBNAME = ""
 
+POSTGRESQL_HOST = "localhost"
+POSTGRESQL_PORT = 5432
+POSTGRESQL_USERNAME = ""
+POSTGRESQL_PASSWORD = ""
+POSTGRESQL_DBNAME = ""
+
 SQLITE_PATH = ""
 
 MONGODB_HOST = "localhost"
@@ -29,13 +35,19 @@ RABBITMQ_USERNAME = ""
 RABBITMQ_PASSWORD = ""
 RABBITMQ_VHOST = "/"
 
-SMTP_USERNAME = ""
-SMTP_PASSWORD = ""
-SMTP_HOST = 'smtp.qq.com'  # smtp.163.com
+NOTIFIER_TITLE = 'athenaeum 通知提醒标题'
+NOTIFIER_MESSAGE_TEMPLATE = '这是一个 `athenaeum 通知提醒消息` 来自 {}'
+NOTIFIER_SUBJECT = 'athenaeum 通知提醒主题'
+NOTIFIER_CONTENT_TEMPLATE = '这是一个 `athenaeum 通知提醒内容` 来自 {}'
+
+NOTIFY_BY_EMAIL_USERNAME = ""
+NOTIFY_BY_EMAIL_PASSWORD = ""
+NOTIFY_BY_EMAIL_HOST = 'smtp.qq.com'  # smtp.163.com
+NOTIFY_BY_EMAIL_TO = ""
+
+NOTIFY_BY_BARK_KEY = ""
 
 OSS_ACCESS_KEY_ID = ""
 OSS_ACCESS_KEY_SECRET = ""
 OSS_BUCKET_NAME = ""
 OSS_ENDPOINT = ""
-
-BARK_KEY = ""
