--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "athenaeum"
-version = "0.1.4"
+version = "0.1.8"
 description = ""
 authors = ["mathewgeola <mathewgeola@163.com>"]
 readme = "README.md"
@@ -32,9 +32,17 @@ pandas = "^2.2.2"
 requests-toolbelt = "^1.0.0"
 sqlalchemy = "^2.0.32"
 pypinyin = "^0.52.0"
+xlsxwriter = "^3.2.0"
+arrow = "^1.3.0"
+pika = "^1.3.2"
+pyautogui = "^0.9.54"
+elasticsearch = "^8.15.1"
 
 [tool.poetry.scripts]
 render_project = "athenaeum.scripts:render_project"
+render_item = "athenaeum.scripts:render_item"
+render_model = "athenaeum.scripts:render_model"
+render_spider = "athenaeum.scripts:render_spider"
 
 [build-system]
 requires = ["poetry-core"]
