--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ arrow = "^1.3.0"
 pika = "^1.3.2"
 pyautogui = "^0.9.54"
 elasticsearch = "^8.15.1"
+parsel = "^1.9.1"
 
 [tool.poetry.scripts]
 render_project = "athenaeum.scripts:render_project"
